--- a/components/card/solution/index.html
+++ b/components/card/solution/index.html
@@ -18,11 +18,8 @@
       <div class="wrapper">
         <div class="os-product-card">
           <div
-            class="os-product-img"
-            style="
-              background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);
-            "
-          ></div>
+            class="os-product-img" style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);">
+          </div>
 
           <div class="os-product-content">
             <div class="os-product-price-wrapper">
