--- a/components/pagination/index.html
+++ b/components/pagination/index.html
@@ -15,20 +15,20 @@
 
         <ul class="pagination_box">
 
-          <li class="page-box page-previous"> <i class="bi bi-chevron-left"></i> </li>
-          <li class="page-box page-number">1</li>
-          <li class="page-box page-number">2</li>
-          <li class="page-box page-number">3</li>
-          <li class="page-box page-number">4</li>
-          <li class="page-box page-number">5</li>
-          <li class="page-box page-number">6</li>
-          <li class="page-box page-number">7</li>
-          <li class="page-box page-number">8</li>
-          <li class="page-box page-number">9</li>
-          <li class="page-box page-number">10</li>
-          <li class="page-box page-number">11</li>
-          <li class="page-box page-number">12</li>
-          <li class="page-box page-next"> <i class="bi bi-chevron-right"></i> </li>
+          <li a href="#" class="page-box page-previous"> <i class="bi bi-chevron-left"></i> </li>
+          <li a href="#" class="page-box page-number active">1</li>
+          <li a href="#" class="page-box page-number">2</li>
+          <li a href="#" class="page-box page-number">3</li>
+          <li a href="#" class="page-box page-number">4</li>
+          <li a href="#" class="page-box page-number">5</li>
+          <li a href="#" class="page-box page-number">6</li>
+          <li a href="#" class="page-box page-number">7</li>
+          <li a href="#" class="page-box page-number">8</li>
+          <li a href="#" class="page-box page-number">9</li>
+          <li a href="#" class="page-box page-number">10</li>
+          <li a href="#" class="page-box page-number">11</li>
+          <li a href="#" class="page-box page-number">12</li>
+          <li a href="#" class="page-box page-next"> <i class="bi bi-chevron-right"></i> </li>
 
         </ul>
 
