--- a/components/pagination/style.css
+++ b/components/pagination/style.css
@@ -10,7 +10,6 @@ body {
   margin: 100px auto;
   width: 790px;
   height: 205px;
-
   color: #2C2C2C;
   font-style: normal;
   font-weight: 400;
@@ -18,7 +17,6 @@ body {
   background: #FFFFFF;
   border: 1px solid #000000;
   box-sizing: border-box;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,29 +25,27 @@ body {
 .pagination_box {
   margin: 0;
   padding: 0;
-
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-  .page-box{
+  .page-box {
     width: 40px;
     height: 40px;
     border-radius: 50%;
     background:  #EDEDED;
-
     display: flex;
     align-items: center;
+    transition: .3s;
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
   }
 
   .page-number {
     display: flex;
     justify-content: center;
-  }
-
-  .page-box:hover {
-    background: #7E72F2
   }
 
   .page-previous {
@@ -62,4 +58,9 @@ body {
     display: flex;
     justify-content: center;
     margin-left: 15px;
+}
+
+  .page-box:hover,
+  .active {
+    background: #7E72F2
 }
