--- a/src/components/card/css/style.css
+++ b/src/components/card/css/style.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'icomoon';
-  src: url("../fonts/icomoon.eot?aemu3s");
-  src: url("../fonts/icomoon.eot?aemu3s#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?aemu3s") format("truetype"), url("../fonts/icomoon.woff?aemu3s") format("woff"), url("../fonts/icomoon.svg?aemu3s#icomoon") format("svg");
+  src: url("../../../fonts/icomoon.eot?aemu3s");
+  src: url("../../../fonts/icomoon.eot?aemu3s#iefix") format("embedded-opentype"), url("../../../fonts/icomoon.ttf?aemu3s") format("truetype"), url("../../../fonts/icomoon.woff?aemu3s") format("woff"), url("../../../fonts/icomoon.svg?aemu3s#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -36,8 +36,7 @@
 }
 
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -46,8 +45,7 @@
   width: 317px;
   height: 394px;
   background: #FFFFFF;
-  -webkit-box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
-          box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
   border-radius: 8px;
 }
 
@@ -64,24 +62,14 @@
 }
 
 .product-card__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 .product-card__rating {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   padding: 0 11px;
   width: 70px;
   height: 27px;
@@ -117,7 +105,6 @@
   border-radius: 0px 0px 5px 5px;
   background: #7E72F2;
   cursor: pointer;
-  -webkit-transition: .4s;
   transition: .4s;
 }
 
