added modified card and pagination

--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -1,3 +1,65 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-/* put your styles in this file */
+:root {
+  --grey-100:#EDEDED;
+  --purpure-100:#7E72F2;
+  --grey-500:#2C2C2C;
+  --wight:#ffffff;
+  --black:#000000;
+}
+a {
+  all: unset;
+}
+.wrapper {
+  margin: 100px auto;
+  padding:82px 0;
+  width:790px;
+  border:1px solid var(--black);
+}
+.font-montserrat-400{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+}
+.card-pagination {
+  width:590px;
+  margin:0 auto;
+  font-size: 0.875rem;
+}
+.card-pagination, .pagination-block{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.card-pagination {
+  justify-content: space-between;
+}
+.pagination-block{
+  justify-content: center;
+  list-style-type: none;
+  width:100%;
+  padding: 0;
+}
+.pagination-item, .panigation-arrow-left, .panigation-arrow-right  {
+  width: 40px;
+  height: 40px;
+  background:var(--grey-100);
+  border-radius:50%;
+  color:var(--grey-500);
+  cursor: pointer;
+}
+.pagination-item a{
+  display: block;
+}
+.pagination-item:hover,
+.panigation-arrow-left:hover,
+.panigation-arrow-right:hover,
+.pagination-item:hover a,
+.pagination-item.active{
+  background:var(--purpure-100);
+  color: var(--wight);
+}
+.panigation-arrow-left, .panigation-arrow-right, .pagination-item  {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
