add card-list, refactoring

--- a/src/components/card/index.html
+++ b/src/components/card/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="../../styles/style.css">
 
   <style>
     .wrapper {
@@ -16,9 +16,8 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- Card component -->
     <div class="product-card">
-      <img src="img/notebook_acer_aspire_3.jpg" alt="notebook" class="product-card__img">
+      <img src="../../img/notebook_acer_aspire_3.jpg" alt="notebook" class="product-card__img">
       <div class="product-card__content">
         <div class="product-card__wrapper">
           <div class="product-card__rating">
