--- a/src/components/pagination/index.html
+++ b/src/components/pagination/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="../../styles/style.css">
 
   <style>
     .wrapper {
@@ -16,7 +16,6 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
     <div class="pagination">
       <div class="pagination__arrow"></div>
         <ul class="pagination__list">
