--- a/src/sass/libs/_flex-grid.scss
+++ b/src/sass/libs/_flex-grid.scss
@@ -1,12 +1,11 @@
 .container {
   margin: 0 auto;
-  max-width: 1320px;
+  max-width: 100%;
 }
 
 .row {
   width: 100%;
   display: flex;
-  
   flex-flow: row wrap;
 }
 
