--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../../../fonts/icomoon.eot?aemu3s');
-  src:  url('../../../fonts/icomoon.eot?aemu3s#iefix') format('embedded-opentype'),
-    url('../../../fonts/icomoon.ttf?aemu3s') format('truetype'),
-    url('../../../fonts/icomoon.woff?aemu3s') format('woff'),
-    url('../../../fonts/icomoon.svg?aemu3s#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?aemu3s');
+  src:  url('../fonts/icomoon.eot?aemu3s#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?aemu3s') format('truetype'),
+    url('../fonts/icomoon.woff?aemu3s') format('woff'),
+    url('../fonts/icomoon.svg?aemu3s#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
