--- a/components/layout/layout.html
+++ b/components/layout/layout.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container-xxl gy-3 breakpoints">
       <div class="row align-items-start">
-        <div class="col-3 left-sidebar">Left-side</div>
+        <div class="col-3 d-none d-sm-block left-sidebar">Left-side</div>
         <div class="col main-content">
           <div class="row">Right side</div>
           <div class="row">
