--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -7,7 +7,6 @@
 
   <style>
     .wrapper {
-      width: 800px;
       margin: 100px auto;
     }
   </style>
@@ -15,7 +14,29 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
+
+    <div class="size">
+      <img src="./images/arrow-left.png" alt="arrow-left">
+    </div>
+
+    <div class="numbers">
+      <div class="size">1</div>
+      <div class="size">2</div>
+      <div class="size">3</div>
+      <div class="size">4</div>
+      <div class="size">5</div>
+      <div class="size">6</div>
+      <div class="size">7</div>
+      <div class="size">8</div>
+      <div class="size">9</div>
+      <div class="size">10</div>
+      <div class="size">11</div>
+      <div class="size">12</div>
+    </div>
+
+    <div class="size">
+      <img src="./images/arrow-right.png" alt="arrow-right">
+    </div>
   </div>
 </main>
 </body>
