--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -1,3 +1,60 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
-
+/*@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");*/
 /* put your styles in this file */
+
+:root {
+  --var-bg-wrapper: #FFFFFF;
+  --var-color-bg-body: #E5E5E5;
+  --var-color-hover: #7E72F2;
+  --var-color-circle-bg-defolt: #EDEDED;
+  --var-color-number: #2C2C2C;
+}
+
+body {
+  background: var(--var-color-bg-body);
+}
+
+.size {
+  background: var(--var-color-circle-bg-defolt);
+  width: 2.4rem;
+  height: 2.4rem;
+  font-weight: 800;
+  border-radius: 1.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 2px 8px gray;
+}
+
+.size:hover {
+  background: var(--var-color-hover);
+  border: 1px solid var(--var-color-circle-bg-defolt);
+  color: var(--var-color-circle-bg-defolt);
+  transition: .3s;
+  box-sizing: border-box;
+}
+
+img {
+  font-weight: 800;
+  width: 0.7rem;
+}
+
+.wrapper {
+  width: 55rem;
+  height: 15rem;
+  background: var(--var-bg-wrapper);
+  color: var(--var-color-number);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.133);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 6rem 4rem 6rem 4rem;
+}
+
+.numbers {
+  width: 40rem;
+  margin: 0 2rem 0 2rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
