--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,11 +1,11 @@
 @media (min-width: 576px) {
-  .card-list-wrapper {
+  .card-list {
     width: 100%;
   }
 }
 
 @media (min-width: 992px) {
-  .card-list-wrapper {
+  .card-list {
     width: 990px;
   }
 }
