--- a/src/components/card-list/index.html
+++ b/src/components/card-list/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <main>
-    <div class="card-list-wrapper">
+    <div class="card-list">
       <div class="container">
         <div class="row">
           <div class="col-12 col-m-6 col-l-4">
