--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?aemu3s');
-  src:  url('../fonts/icomoon.eot?aemu3s#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?aemu3s') format('truetype'),
-    url('../fonts/icomoon.woff?aemu3s') format('woff'),
-    url('../fonts/icomoon.svg?aemu3s#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?243j1o');
+  src:  url('../fonts/icomoon.eot?243j1o#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?243j1o') format('truetype'),
+    url('../fonts/icomoon.woff?243j1o') format('woff'),
+    url('../fonts/icomoon.svg?243j1o#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,14 +25,27 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-arrow:before {
-  content: "\e900";
-}
 .icon-cart:before {
-  content: "\e901";
+  content: "\e900";
   color: #fff;
 }
-.icon-star:before {
+.icon-close:before {
+  content: "\e901";
+}
+.icon-mark:before {
   content: "\e902";
+  color: #fff;
+}
+.icon-minus:before {
+  content: "\e903";
+}
+.icon-plus:before {
+  content: "\e904";
+}
+.icon-search:before {
+  content: "\e905";
+}
+.icon-star:before {
+  content: "\e906";
   color: #fff;
 }
