--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -215,8 +215,8 @@
 
 @font-face {
   font-family: 'icomoon';
-  src: url("../fonts/icomoon.eot?aemu3s");
-  src: url("../fonts/icomoon.eot?aemu3s#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?aemu3s") format("truetype"), url("../fonts/icomoon.woff?aemu3s") format("woff"), url("../fonts/icomoon.svg?aemu3s#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?243j1o");
+  src: url("../fonts/icomoon.eot?243j1o#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?243j1o") format("truetype"), url("../fonts/icomoon.woff?243j1o") format("woff"), url("../fonts/icomoon.svg?243j1o#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -236,23 +236,41 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-arrow:before {
-  content: "\e900";
-}
-
 .icon-cart:before {
-  content: "\e901";
+  content: "\e900";
   color: #fff;
 }
 
-.icon-star:before {
+.icon-close:before {
+  content: "\e901";
+}
+
+.icon-mark:before {
   content: "\e902";
+  color: #fff;
+}
+
+.icon-minus:before {
+  content: "\e903";
+}
+
+.icon-plus:before {
+  content: "\e904";
+}
+
+.icon-search:before {
+  content: "\e905";
+}
+
+.icon-star:before {
+  content: "\e906";
   color: #fff;
 }
 
 * {
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+  margin: 0;
 }
 
 ul {
@@ -333,6 +351,14 @@ ul {
   background: #7367e6;
 }
 
+.button_cart {
+  display: block;
+  margin: 10px auto 0 auto;
+  width: 200px;
+  height: 28px;
+  border-radius: 3px;
+}
+
 .pagination {
   display: flex;
   justify-content: space-between;
@@ -405,7 +431,7 @@ ul {
   color: #fff;
 }
 
-.card-list-wrapper {
+.card-list {
   margin: 100px auto;
 }
 
@@ -413,14 +439,94 @@ ul {
   margin: 20px auto 0 auto;
 }
 
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0%;
+  background-color: rgba(0, 0, 0, 0.18);
+}
+
+.cart {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 50px 10px;
+  width: 95%;
+  min-height: 90%;
+  background: #FEFEFE;
+}
+
+.cart__close {
+  position: absolute;
+  top: 0;
+  right: 15px;
+  font-size: 30px;
+  line-height: 50px;
+  cursor: pointer;
+}
+
+.cart__list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 63px 15px 25px;
+  min-height: 70px;
+  background: #FFFFFF;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+  border-radius: 3px;
+}
+
+.cart__item-img {
+  width: 56px;
+  height: 40px;
+}
+
+.cart__item-descr {
+  margin-left: 10px;
+  font-size: 13px;
+  line-height: 16px;
+}
+
+.cart__item-count {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 10px;
+  width: 70px;
+}
+
+.cart__item-count span {
+  font-size: 14px;
+}
+
+.cart__btn {
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+  background: #fff;
+}
+
+.cart__item-price {
+  margin-left: 10px;
+  font-size: 13px;
+  line-height: 16px;
+}
+
+.cart__total {
+  margin-top: 25px;
+  font-size: 14px;
+  text-align: center;
+}
+
 @media (min-width: 576px) {
-  .card-list-wrapper {
+  .card-list {
     width: 100%;
   }
 }
 
 @media (min-width: 992px) {
-  .card-list-wrapper {
+  .card-list {
     width: 990px;
   }
 }
