--- a/src/components/cart/01-css-task/style.css
+++ b/src/components/cart/01-css-task/style.css
@@ -1,2 +1,95 @@
 /* put your styles in this file */
 /*@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";*/
+:root {
+  --var-bg-wrapper: skyblue;
+  --var-bg-block: #FFFFFF;
+  --var-color-bg-btn-footer: #7E72F2;
+  --var-color-text: #2C2C2C;
+}
+
+#root {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+p {
+  margin: 0;
+}
+
+.wrapper {
+  width: 90%;
+  min-height: 100vh;
+  background: var(--var-bg-wrapper);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.wrapper-block {
+  width: 95%;
+  background: var(--var-bg-block);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.133);
+  min-height: 2rem;
+  border-radius: 0.3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.2rem 0.4rem 0.2rem 0.4rem;
+}
+
+.wrapper-block-img_inf {
+  width: 60%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.wrapper-block-img_inf > img {
+  width: 4rem;
+  margin-right: 2rem;
+}
+
+.wrapper-block-img_inf > p {
+  font-size: 1rem;
+  color: var(--var-color-text);
+  font-weight: 400;
+}
+
+.wrapper-block-amount {
+  width: 20%;
+  display: flex;
+  justify-content: space-around;
+  align-items: normal;
+}
+
+.wrapper-block-amount > p {
+  font-weight: bold;
+}
+
+.wrapper-block-price {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+}
+
+.footer {
+  text-align: center;
+}
+
+.footer > p {
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.footer > button {
+  width: 10rem;
+  border-radius: 0.3rem;
+  background: var(--var-color-bg-btn-footer);
+  color: var(--var-bg-block);
+  font-weight: bold;
+}
