serch-box complete v1.0

--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -7,16 +7,23 @@
   <link rel="stylesheet" href="style.css">
 
   <style>
-    .wrapper {
+    /* .wrapper {
       width: 400px;
       margin: 100px auto;
-    }
+    } */
   </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
     <!-- SearchBox component -->
+    <div class="os-input-box">
+      <input class="os-input" type="search" spellcheck="true">
+      <button class="os-serch-button" type="submit">
+        <i class="bi bi-search"></i>
+      </button>
+
+    </div>
   </div>
 </main>
 </body>
