--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,3 +1,42 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 /* put your styles in this file */
+.os-input-box {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  vertical-align: middle;
+  align-items: center;
+  max-height: 44px;
+  width: 100%;
+  border-radius: 10px;
+  border-style: none;
+  outline: none;
+  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.15);
+  padding: 0px 15px 0px 5px;
+}
+.os-input {
+  display: block;
+  box-sizing: border-box;
+  background: none;
+  border: none;
+  outline: none;
+  font-size: 1.2rem;
+  font-weight: 400;
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+  }
+  .os-input::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+}
+.os-serch-button {
+  display: block;
+  box-sizing: border-box;
+  background: none;
+  border: none;
+  height: 40px;
+  font-size: 1.2rem;
+
+}
