--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
-
 /* put your styles in this file */
 .os-input-box {
+  background: white;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
