--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -1,1 +1,119 @@
-/* put your styles in this file */
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  margin: 0;
+}
+
+a {
+  all: unset;
+}
+
+
+:root {
+  --purple-100: #7E72F2;
+  --wite: #FFFFFF;
+}
+
+.card-component-box {
+  width: 317px;
+  height: 394px;
+  background: var(--wite);
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+  border-radius: 8px;
+  font-family: 'Montserrat', sans-serif;
+  color: #2C2C2C;
+  font-weight: 400;
+  position: relative;
+}
+
+.card-content {
+  padding-top: 12px;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-product-image {
+ width: 293px;
+ height: 200px;
+ margin: auto;
+ display: flex;
+ justify-content: center;
+}
+
+.product-image {
+  width: 100%;
+}
+
+.content-details {
+  margin: 22px;
+}
+.card-purple-elements {
+  background-color: var(--purple-100);
+  color: var(--wite);
+}
+
+.product-price-reating-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 22px;
+}
+
+.card-rating {
+  width: 70px;
+  height: 27px;
+  font-size: 13px;
+  border-radius: 3px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.bi {
+  margin-bottom: 3px;
+}
+
+.card-product-price {
+  font-size: 16px;
+}
+
+.card-product-name {
+  font-size: 13px;
+  line-height: 16px;
+  display: block;
+}
+
+.card-product-type {
+  font-size: 10px;
+  line-height: 12px;
+  margin-top: 10px;
+}
+
+.card-add-button {
+  width: 100%;
+  height: 40px;
+  border: none;
+  border-radius: 0px 0px 5px 5px;
+  font-family: inherit;
+  font-weight: inherit;
+  text-transform: uppercase;
+  font-size: 12px;
+  position: absolute;
+  bottom: 0;
+}
+
+.card-cursor-pointer {
+  cursor: pointer;
+}
+
+
