added search-box component

--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -5,11 +5,12 @@
   <title>SearchBox component</title>
 
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Roboto:wght@100;300&display=swap">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
   <style>
     .wrapper {
-      width: 400px;
-      margin: 100px auto;
+      margin: 100px 100px;
     }
   </style>
 </head>
@@ -17,6 +18,10 @@
 <main>
   <div class="wrapper">
     <!-- SearchBox component -->
+    <div class="search-component">
+      <input type="Search" class="search-input" placeholder="Search">
+      <label class="bi bi-search search-icon" for="search-input"></label>
+    </div>
   </div>
 </main>
 </body>
