--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -6,16 +6,19 @@
 
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+
 </head>
 <body>
 <main>
   <div class="wrapper">
+    <div class="abc1">
+      Search
+    </div>
+    <div class="abc2">
+      <img class="png" src="image.png" alt="Image)">
+    </div>
+
+
     <!-- SearchBox component -->
   </div>
 </main>
