--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,3 +1,25 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 /* put your styles in this file */
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+  background: white;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.2);
+  height: 45px;
+  width: 990px;
+  margin: 100px auto;
+  border-radius: 4%;
+}
+.png {
+  width: 25px;
+  height: 25px;
+}
+.abc1 {
+  padding-top: 12px;
+  padding-left: 10px;
+}
+.abc2 {
+  padding-top: 12px;
+  padding-right: 10px;
+}
