--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -1,15 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Cart component</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<main>
-  <div id="root">
-    <!-- Cart component -->
-  </div>
-</main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Cart component</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <main>
+      <div id="root">
+        <main class="cart">
+          <ul class="cart-list">
+            <li class="cart-item">
+              <img
+              src="./images/Acer-Aspire.svg"
+              alt="Acer-Aspire"
+                class="cart-item-image"
+              />
+              <p class="cart-item-name">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal
+                Black</p>
+              <div class="cart-item-amount">
+                <img src="./images/dash-circle.svg" alt="minus" class="amount-minus" />
+                <p class="amount-number">1</p>
+                <img src="./images/plus-circle.svg" alt="plus" class="amount-plus" />
+              </div>
+              <p class="cart-item-price">15999</p>
+            </li>
+            <li class="cart-item">
+              <img
+              src="./images/Acer-Aspire.svg"
+              alt="Acer-Aspire"
+                class="cart-item-image"
+              />
+              <p class="cart-item-name">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal
+                Black</p>
+              <div class="cart-item-amount">
+                <img src="./images/dash-circle.svg" alt="minus" class="amount-minus" />
+                <p class="amount-number">1</p>
+                <img src="./images/plus-circle.svg" alt="plus" class="amount-plus" />
+              </div>
+              <p class="cart-item-price">15999</p>
+            </li>
+            <li class="cart-item">
+              <img
+              src="./images/Acer-Aspire.svg"
+              alt="Acer-Aspire"
+                class="cart-item-image"
+              />
+              <p class="cart-item-name">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal
+                Black</p>
+              <div class="cart-item-amount">
+                <img src="./images/dash-circle.svg" alt="minus" class="amount-minus" />
+                <p class="amount-number">1</p>
+                <img src="./images/plus-circle.svg" alt="plus" class="amount-plus" />
+              </div>
+              <p class="cart-item-price">15999</p>
+            </li>
+            <li class="cart-item">
+              <img
+              src="./images/Acer-Aspire.svg"
+              alt="Acer-Aspire"
+                class="cart-item-image"
+              />
+              <p class="cart-item-name">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal
+                Black</p>
+              <div class="cart-item-amount">
+                <img src="./images/dash-circle.svg" alt="minus" class="amount-minus" />
+                <p class="amount-number">1</p>
+                <img src="./images/plus-circle.svg" alt="plus" class="amount-plus" />
+              </div>
+              <p class="cart-item-price">15999</p>
+            </li>
+            <li class="cart-item">
+              <img
+              src="./images/Acer-Aspire.svg"
+              alt="Acer-Aspire"
+                class="cart-item-image"
+              />
+              <p class="cart-item-name">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal
+                Black</p>
+              <div class="cart-item-amount">
+                <img src="./images/dash-circle.svg" alt="minus" class="amount-minus" />
+                <p class="amount-number">1</p>
+                <img src="./images/plus-circle.svg" alt="plus" class="amount-plus" />
+              </div>
+              <p class="cart-item-price">15999</p>
+            </li>
+
+          </ul>
+          <p class="cart-total">Total: 12351345</p>
+          <button class="cart-order-btn">ORDER</button>
+        </main>
+      </div>
+    </main>
+  </body>
 </html>
