--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -1,1 +1,66 @@
 /* put your styles in this file */
+.product-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 395px;
+  width: 317px;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+  border-radius: 8px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+}
+.product-img {
+  height: 200px;
+  width: 293px;
+  margin: 12px 12px 22px 12px;
+}
+.mark-price {
+  width: 88%;
+  height: 27px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+}
+.mark-btn {
+  font-family: "Montserrat", sans-serif;
+  font-size: 13px;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 27px;
+  width: 72px;
+  border: none;
+  border-radius: 3px;
+  background-color: #7e72f2;
+}
+.price {
+  font-size: 15px;
+}
+
+.product-text {
+  width: 88%;
+  /* margin-bottom: 22px; */
+}
+.product-name {
+  font-size: 13px;
+  margin-bottom: 10px;
+}
+.product-category {
+  font-size: 10px;
+}
+
+.add-btn {
+  border: none;
+  border-radius: 0 0 8px 8px;
+  background-color: #7e72f2;
+  color: white;
+  width: 100%;
+  height: 40px;
+  font-family: "Montserrat", sans-serif;
+}
