--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8" />
   <title>CardsList component</title>
   <link rel="stylesheet" href="style.css">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+    rel="stylesheet"
+  />
   <style>
     .wrapper {
 
@@ -14,7 +19,182 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- CardsList component -->
+    <div class="products">
+      <section class="product-item">
+        <img
+          src="./images/Acer-Aspire.svg"
+          alt="Acer-Aspire"
+          class="product-img"
+        />
+        <div class="mark-price">
+          <button class="mark-btn">
+            <p class="mark">1.23</p>
+            <img src="./images/star-logo.svg" alt="star-logo" />
+          </button>
+          <p class="price">15999</p>
+        </div>
+        <div class="product-text">
+          <p class="product-name">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal
+            Black
+          </p>
+          <p class="product-category">laptops</p>
+        </div>
+        <input type="button" class="add-btn" value="ADD TO CART" />
+      </section>
+      <section class="product-item">
+        <img
+          src="./images/Acer-Aspire.svg"
+          alt="Acer-Aspire"
+          class="product-img"
+        />
+        <div class="mark-price">
+          <button class="mark-btn">
+            <p class="mark">1.96</p>
+            <img src="./images/star-logo.svg" alt="star-logo" />
+          </button>
+          <p class="price">21500</p>
+        </div>
+        <div class="product-text">
+          <p class="product-name">
+            Ноутбук Acer Aspire 7 A715-41G-R9KP (NH.Q8QEU.00L) Charcoal
+            Black
+          </p>
+          <p class="product-category">laptops</p>
+        </div>
+        <input type="button" class="add-btn" value="ADD TO CART" />
+      </section>
+      <section class="product-item">
+        <img
+          src="./images/Acer-Aspire.svg"
+          alt="Acer-Aspire"
+          class="product-img"
+        />
+        <div class="mark-price">
+          <button class="mark-btn">
+            <p class="mark">2.42</p>
+            <img src="./images/star-logo.svg" alt="star-logo" />
+          </button>
+          <p class="price">22999</p>
+        </div>
+        <div class="product-text">
+          <p class="product-name">
+            Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal
+            Black
+          </p>
+          <p class="product-category">laptops</p>
+        </div>
+        <input type="button" class="add-btn" value="ADD TO CART" />
+      </section>
+      <section class="product-item">
+        <img
+          src="./images/Acer-Nitro.svg"
+          alt="Acer-Nitro"
+          class="product-img"
+        />
+        <div class="mark-price">
+          <button class="mark-btn">
+            <p class="mark">0.53</p>
+            <img src="./images/star-logo.svg" alt="star-logo" />
+          </button>
+          <p class="price">28999</p>
+        </div>
+        <div class="product-text">
+          <p class="product-name">
+            Ноутбук Acer Nitro 5 AN515-55-56WH (NH.Q7PEU.00L) Obsidian
+          </p>
+          <p class="product-category">laptops</p>
+        </div>
+        <input type="button" class="add-btn" value="ADD TO CART" />
+      </section>
+      <section class="product-item">
+        <img
+          src="./images/Acer-Aspire.svg"
+          alt="Acer-Aspire"
+          class="product-img"
+        />
+        <div class="mark-price">
+          <button class="mark-btn">
+            <p class="mark">3.2</p>
+            <img src="./images/star-logo.svg" alt="star-logo" />
+          </button>
+          <p class="price">22500</p>
+        </div>
+        <div class="product-text">
+          <p class="product-name">
+            Ноутбук Acer Aspire 7 A715-75G-57LR (NH.Q87EU.006) Charcoal
+            Black
+          </p>
+          <p class="product-category">laptops</p>
+        </div>
+        <input type="button" class="add-btn" value="ADD TO CART" />
+      </section>
+      <section class="product-item">
+        <img
+          src="./images/Macbook-air.svg"
+          alt="Macbook_Air"
+          class="product-img"
+        />
+        <div class="mark-price">
+          <button class="mark-btn">
+            <p class="mark">1.57</p>
+            <img src="./images/star-logo.svg" alt="star-logo" />
+          </button>
+          <p class="price">33999</p>
+        </div>
+        <div class="product-text">
+          <p class="product-name">
+            Ноутбук Apple MacBook Air 13" M1 256GB 2020 (MGND3) Gold
+          </p>
+          <p class="product-category">laptops</p>
+        </div>
+        <input type="button" class="add-btn" value="ADD TO CART" />
+      </section>
+      <section class="product-item">
+        <img
+          src="./images/Macbook-pro16.svg"
+          alt="Macbook-pro16"
+          class="product-img"
+        />
+        <div class="mark-price">
+          <button class="mark-btn">
+            <p class="mark">1.57</p>
+            <img src="./images/star-logo.svg" alt="star-logo" />
+          </button>
+          <p class="price">81000</p>
+        </div>
+        <div class="product-text">
+          <p class="product-name">
+            Ноутбук Apple MacBook Pro 16" 512GB 2019 (MVVL2) Silver
+          </p>
+          <p class="product-category">laptops</p>
+        </div>
+        <input type="button" class="add-btn" value="ADD TO CART" />
+      </section>
+      <section class="product-item">
+        <img
+          src="./images/Macbook-pro13A.svg"
+          alt="Macbook-pro13A"
+          class="product-img"
+        />
+        <div class="mark-price">
+          <button class="mark-btn">
+            <p class="mark">1.89</p>
+            <img src="./images/star-logo.svg" alt="star-logo" />
+          </button>
+          <p class="price">70999</p>
+        </div>
+        <div class="product-text">
+          <p class="product-name">
+            Ноутбук Apple MacBook Pro 13" A2251 Retina 1TB 2020 (MWP82)
+            Silver
+          </p>
+          <p class="product-category">laptops</p>
+        </div>
+        <input type="button" class="add-btn" value="ADD TO CART" />
+      </section>
+
+    </div>
   </div>
 </main>
 </body>
