Create all components

--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -14,8 +14,16 @@
 </head>
 <body>
 <main>
-  <div class="wrapper">
-    <!-- DoubleSlider component -->
+  <div class="slider">
+    <div class="slide">
+      <img src="./images/slider-left.svg" alt="" />
+      <div class="slide-line"></div>
+      <img src="./images/slider-right.svg" alt="" />
+    </div>
+    <div class="slider-text">
+      <p class="slider-text-left">0 UAH</p>
+      <p class="slider-text-right">85000 UAH</p>
+    </div>
   </div>
 </main>
 </body>
