--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8" />
   <title>FiltersList component</title>
   <link rel="stylesheet" href="style.css">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
   <style>
     .wrapper {
       width: 400px;
@@ -15,7 +20,57 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- FiltersList component -->
+    <p class="filter-name">Category</p>
+            <ul class="filter-list">
+              <li class="filter-item">
+                <label class="checkbox">
+                  <input type="checkbox" />
+                  <span class="checkbox-text">Monitors</span>
+                </label>
+              </li>
+              <li class="filter-item">
+                <label class="checkbox">
+                  <input type="checkbox" />
+                  <span class="checkbox-text">Laptops</span>
+                </label>
+              </li>
+              <li class="filter-item">
+                <label class="checkbox">
+                  <input type="checkbox" />
+                  <span class="checkbox-text">Video cards</span>
+                </label>
+              </li>
+              <li class="filter-item">
+                <label class="checkbox">
+                  <input type="checkbox" />
+                  <span class="checkbox-text">Gaming keyboards</span>
+                </label>
+              </li>
+              <li class="filter-item">
+                <label class="checkbox">
+                  <input type="checkbox" />
+                  <span class="checkbox-text">Computer mouse</span>
+                </label>
+              </li>
+              <li class="filter-item">
+                <label class="checkbox">
+                  <input type="checkbox" />
+                  <span class="checkbox-text">SSD</span>
+                </label>
+              </li>
+              <li class="filter-item">
+                <label class="checkbox">
+                  <input type="checkbox" />
+                  <span class="checkbox-text">Sound cards</span>
+                </label>
+              </li>
+              <li class="filter-item">
+                <label class="checkbox">
+                  <input type="checkbox" />
+                  <span class="checkbox-text">RAM</span>
+                </label>
+              </li>
+            </ul>
   </div>
 </main>
 </body>
