--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -4,10 +4,15 @@
   <meta charset="UTF-8" />
   <title>Pagination component</title>
   <link rel="stylesheet" href="style.css">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+    rel="stylesheet"
+  />
   <style>
     .wrapper {
-      width: 800px;
+      width: 1000px;
       margin: 100px auto;
     }
   </style>
@@ -15,8 +20,76 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
+    <div class="foot">
+      <div class="page">
+        <img class="page-image" src="./images/Left-Arrow.svg" alt="" />
+      </div>
+      <ul class="pages">
+        <li class="pages-item">
+          <div class="page">
+            <p class="page-number">1</p>
+          </div>
+        </li>
+        <li class="pages-item">
+          <div class="page">
+            <p class="page-number">2</p>
+          </div>
+        </li>
+        <li class="pages-item">
+          <div class="page">
+            <p class="page-number">3</p>
+          </div>
+        </li>
+        <li class="pages-item">
+          <div class="page">
+            <p class="page-number">4</p>
+          </div>
+        </li>
+        <li class="pages-item">
+          <div class="page">
+            <p class="page-number">5</p>
+          </div>
+        </li>
+        <li class="pages-item">
+          <div class="page">
+            <p class="page-number">6</p>
+          </div>
+        </li>
+        <li class="pages-item">
+          <div class="page">
+            <p class="page-number">7</p>
+          </div>
+        </li>
+        <li class="pages-item">
+          <div class="page">
+            <p class="page-number">8</p>
+          </div>
+        </li>
+        <li class="pages-item">
+          <div class="page">
+            <p class="page-number">9</p>
+          </div>
+        </li>
+        <li class="pages-item">
+          <div class="page">
+            <p class="page-number">10</p>
+          </div>
+        </li>
+        <li class="pages-item">
+          <div class="page">
+            <p class="page-number">11</p>
+          </div>
+        </li>
+        <li class="pages-item">
+          <div class="page">
+            <p class="page-number">12</p>
+          </div>
+        </li>
+      </ul>
+      <div class="page">
+        <img class="page-image" src="./images/Right-Arrow.svg" alt="" />
+      </div>
+    </div>  </div>
 </main>
 </body>
 </html>
