--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -5,7 +5,12 @@
   <title>SearchBox component</title>
 
   <link rel="stylesheet" href="style.css">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
   <style>
     .wrapper {
       width: 400px;
@@ -16,7 +21,7 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- SearchBox component -->
+    <input type="text" class="search" placeholder="Search" />
   </div>
 </main>
 </body>
