--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,3 +1,18 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-/* put your styles in this file */
+.search {
+  border: none;
+  border-radius: 10px;
+  width: 100%;
+  height: 45px;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+  background: url(./images/Search-logo.svg) no-repeat scroll 95% 50%;
+  margin-bottom: 20px;
+  font-size: 17px;
+  padding-left: 20px;
+}
+.search::placeholder{
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 17px;
+}
