--- a/src/components/side-bar/01-css-task/index.html
+++ b/src/components/side-bar/01-css-task/index.html
@@ -4,18 +4,184 @@
   <meta charset="UTF-8" />
   <title>SideBar component</title>
   <link rel="stylesheet" href="style.css">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+    rel="stylesheet"
+  />
   <style>
     .wrapper {
-      width: 400px;
-      margin: 100px auto;
+      /* width: 1000px; */
+      margin: 100px 100px;
     }
   </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <!-- SideBar component -->
+    <aside class="left-aside">
+      <div class="filters">
+        <p class="filter-name">Price</p>
+        <div class="slider">
+          <div class="slide">
+            <img src="./images/slider-left.svg" alt="" />
+            <div class="slide-line"></div>
+            <img src="./images/slider-right.svg" alt="" />
+          </div>
+          <div class="slider-text">
+            <p class="slider-text-left">0 UAH</p>
+            <p class="slider-text-right">85000 UAH</p>
+          </div>
+        </div>
+        <p class="filter-name">Category</p>
+        <ul class="filter-list">
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">Monitors</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">Laptops</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">Video cards</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">Gaming keyboards</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">Computer mouse</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">SSD</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">Sound cards</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">RAM</span>
+            </label>
+          </li>
+        </ul>
+
+        <hr class="filters-line" />
+
+        <p class="filter-name">Brand</p>
+        <ul class="filter-list">
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">Asus</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">Acer</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">Apple</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">Dell</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">Dynamode</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">Gigabyte</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">Kingston</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">Lenovo</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">Logitech</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">MSI</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">BenQ</span>
+            </label>
+          </li>
+          <li class="filter-item">
+            <label class="checkbox">
+              <input type="checkbox" />
+              <span class="checkbox-text">A4Tech</span>
+            </label>
+          </li>
+        </ul>
+
+        <hr class="filters-line" />
+
+        <p class="filter-name">Rating</p>
+        <div class="slider">
+          <div class="slide">
+            <img src="./images/slider-left.svg" alt="" />
+            <div class="slide-line"></div>
+            <img src="./images/slider-right.svg" alt="" />
+          </div>
+          <div class="slider-text">
+            <p class="slider-text-left">0</p>
+            <p class="slider-text-right">5</p>
+          </div>
+        </div>
+      </div>
+
+      <input class="aside-btn" type="button" value="CLEAR ALL FILTERS" />
+    </aside>
   </div>
 </main>
 </body>
